Fix 'See more' prompt being off-centered on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1087,6 +1087,7 @@ input[type='submit']:disabled {
 	width: 100%;
 	z-index: 1;
 	padding-bottom: 3.44rem;
+	left: 0;
 
 	.scrolly {
 		font-size: 0.8em;
